improve descriptions. update readme